--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ numpy==1.22.3
 pandas==1.4.2
 pathspec==0.9.0
 platformdirs==2.5.2
+psycopg2==2.9.3
 pylint==2.13.9
 python-dateutil==2.8.2
 python-dotenv==0.20.0
